implement authentication via Firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <application
+            android:name=".SnapreealApplication"
             android:allowBackup="true"
+            android:usesCleartextTraffic="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
             android:icon="@mipmap/ic_launcher"
