--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <application
             android:name=".SnapreealApplication"
             android:allowBackup="true"
-            android:usesCleartextTraffic="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
             android:icon="@mipmap/ic_launcher"
@@ -13,16 +12,21 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.SnapreealAndroid"
+            android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
-                android:name=".activity.LoginActivity"
+                android:name=".activity.DiaryListActivity"
                 android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+                android:name=".activity.LoginActivity"
+                android:exported="false" />
     </application>
 
 </manifest>
