--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,12 @@
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
+                android:name=".activity.CreateDiaryActivity"
+                android:exported="false"
+                android:windowSoftInputMode="adjustResize" />
+        <activity
                 android:name=".activity.DiaryListActivity"
                 android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
