--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
+                android:name=".ui.diary.details.DiaryDetailsActivity"
+                android:exported="false" />
+        <activity
                 android:name=".ui.diary.create.CreateDiaryActivity"
                 android:exported="false"
                 android:windowSoftInputMode="adjustResize" />
