--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature android:name="android.hardware.camera.any" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission
+            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+            android:maxSdkVersion="28" />
+
     <application
             android:name=".SnapreealApplication"
             android:allowBackup="true"
@@ -14,6 +22,9 @@
             android:theme="@style/Theme.SnapreealAndroid"
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
+        <activity
+                android:name=".ui.diary.details.snaps.create.CreateSnapActivity"
+                android:exported="false" />
         <activity
                 android:name=".ui.diary.details.DiaryDetailsActivity"
                 android:exported="false" />
