--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,17 +23,17 @@
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
-                android:name=".ui.diary.details.snaps.create.CreateSnapActivity"
+                android:name=".snap.ui.create.CreateSnapActivity"
                 android:exported="false" />
         <activity
-                android:name=".ui.diary.details.DiaryDetailsActivity"
+                android:name=".diary.ui.details.days.DiaryDetailsActivity"
                 android:exported="false" />
         <activity
-                android:name=".ui.diary.create.CreateDiaryActivity"
+                android:name=".diary.ui.create.CreateDiaryActivity"
                 android:exported="false"
                 android:windowSoftInputMode="adjustResize" />
         <activity
-                android:name=".ui.diary.list.DiaryListActivity"
+                android:name=".diary.ui.list.DiaryListActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,7 +42,7 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".ui.auth.LoginActivity"
+                android:name=".auth.ui.LoginActivity"
                 android:exported="false" />
     </application>
 
